quick relative path fix 02

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Menú | José JIC</title>
-    <link rel="icon" type="image/svg" href="./assets/css/landing.css" />
+    <link rel="icon" type="image/svg" href="assets/css/landing.css" />
     <link rel="stylesheet" href="./assets/css/landing.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
