quick relative path fix 03, ready

--- a/portafolio.html
+++ b/portafolio.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Portafolio | José JIC </title>
-    <link rel="icon" type="image/svg" href="/assets/images/joss_logo.ico"/>
+    <link rel="icon" type="image/svg" href="assets/images/joss_logo.ico"/>
 	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/flexbox.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -51,7 +51,7 @@
                         </ul>
                     </div>
                         <div class="image">
-                            <img class="image__perfil" src="/assets/images/joss.jpeg" alt="Foto de perfil">
+                            <img class="image__perfil" src="assets/images/joss.jpeg" alt="Foto de perfil">
                         </div>
                 </div>
 
@@ -70,7 +70,7 @@
             <div class="skill-card">
                 <div class="skill-inner">
                     <div class="skill-front">
-                        <img src="/assets/images/html.png" alt="HTML 5">
+                        <img src="assets/images/html.png" alt="HTML 5">
                         <p>HTML 5</p>
                     </div>
                     <div class="skill-back">
@@ -83,7 +83,7 @@
             <div class="skill-card">
                 <div class="skill-inner">
                     <div class="skill-front">
-                        <img src="/assets/images/css.png" alt="CSS 3">
+                        <img src="assets/images/css.png" alt="CSS 3">
                         <p>CSS 3</p>
                     </div>
                     <div class="skill-back">
@@ -95,7 +95,7 @@
             <div class="skill-card">
                 <div class="skill-inner">
                     <div class="skill-front">
-                        <img src="/assets/images/javascript.png" alt="JavaScript">
+                        <img src="assets/images/javascript.png" alt="JavaScript">
                         <p>JavaScript</p>
                     </div>
                     <div class="skill-back">
@@ -108,7 +108,7 @@
             <div class="skill-card">
                 <div class="skill-inner">
                     <div class="skill-front">
-                        <img src="/assets/images/php.png" alt="PHP">
+                        <img src="assets/images/php.png" alt="PHP">
                         <p>PHP</p>
                     </div>
                     <div class="skill-back">
@@ -120,7 +120,7 @@
             <div class="skill-card">
                 <div class="skill-inner">
                     <div class="skill-front">
-                        <img src="/assets/images/mysql.png" alt="MySQL">
+                        <img src="assets/images/mysql.png" alt="MySQL">
                         <p>MySQL</p>
                     </div>
                     <div class="skill-back">
@@ -133,7 +133,7 @@
             <div class="skill-card">
                 <div class="skill-inner">
                     <div class="skill-front">
-                        <img src="/assets/images/python.png" alt="Python">
+                        <img src="assets/images/python.png" alt="Python">
                         <p>Python</p>
                     </div>
                     <div class="skill-back">
@@ -146,7 +146,7 @@
             <div class="skill-card">
                 <div class="skill-inner">
                 <div class="skill-front">
-                    <img src="/assets/images/c++.png" alt="c++">
+                    <img src="assets/images/c++.png" alt="c++">
                     <p>C++</p>
                 </div>
                 <div class="skill-back">
@@ -159,7 +159,7 @@
                 <div class="skill-card">
                     <div class="skill-inner">
                         <div class="skill-front">
-                            <img src="/assets/images/elixir.png" alt="Elixir">
+                            <img src="assets/images/elixir.png" alt="Elixir">
                             <p>Elixir</p>
                         </div>
                         <div class="skill-back">
@@ -172,7 +172,7 @@
             <div class="skill-card">
                 <div class="skill-inner">
                     <div class="skill-front">
-                        <img src="/assets/images/nodejs.png" alt="Node.js">
+                        <img src="assets/images/nodejs.png" alt="Node.js">
                         <p>Node.js</p>
                     </div>
                     <div class="skill-back">
@@ -184,7 +184,7 @@
             <div class="skill-card">
                 <div class="skill-inner">
                     <div class="skill-front">
-                        <img src="/assets/images/react.png" alt="React">
+                        <img src="assets/images/react.png" alt="React">
                         <p>React</p>
                     </div>
                     <div class="skill-back">
@@ -197,7 +197,7 @@
             <div class="skill-card">
                 <div class="skill-inner">
                     <div class="skill-front">
-                        <img src="/assets/images/ios.png" alt="iOS">
+                        <img src="assets/images/ios.png" alt="iOS">
                         <p>iOS</p>
                     </div>
                     <div class="skill-back">
@@ -210,7 +210,7 @@
             <div class="skill-card">
                 <div class="skill-inner">
                     <div class="skill-front">
-                        <img src="/assets/images/android.png" alt="Android">
+                        <img src="assets/images/android.png" alt="Android">
                         <p>Android</p>
                     </div>
                     <div class="skill-back">
@@ -223,7 +223,7 @@
         <div class="skill-card">
             <div class="skill-inner">
                 <div class="skill-front">
-                    <img src="/assets/images/matlab.png" alt="MATLAB">
+                    <img src="assets/images/matlab.png" alt="MATLAB">
                     <p>MATLAB</p>
                 </div>
                 <div class="skill-back">
@@ -235,7 +235,7 @@
         <div class="skill-card">
             <div class="skill-inner">
                 <div class="skill-front">
-                    <img src="/assets/images/r.png" alt="R">
+                    <img src="assets/images/r.png" alt="R">
                     <p>R</p>
                 </div>
                 <div class="skill-back">
