--- a/portafolio.html
+++ b/portafolio.html
@@ -134,7 +134,7 @@
                 <div class="skill-inner">
                     <div class="skill-front">
                         <img src="assets/images/python.png" alt="Python">
-                        <p>Python</p>
+                        <p>Python (WIP)</p>
                     </div>
                     <div class="skill-back">
                         <a target=”_blank href="https://github.com/jossjic/python">Repositorio</a>
@@ -147,7 +147,7 @@
                 <div class="skill-inner">
                 <div class="skill-front">
                     <img src="assets/images/c++.png" alt="c++">
-                    <p>C++</p>
+                    <p>C++ (WIP)</p>
                 </div>
                 <div class="skill-back">
                     <a target=”_blank href="https://github.com/jossjic/c++">Repositorio</a>
@@ -160,7 +160,7 @@
                     <div class="skill-inner">
                         <div class="skill-front">
                             <img src="assets/images/elixir.png" alt="Elixir">
-                            <p>Elixir</p>
+                            <p>Elixir (WIP)</p>
                         </div>
                         <div class="skill-back">
                             <a target=”_blank href="https://github.com/jossjic/elixir">Repositorio</a>
@@ -173,7 +173,7 @@
                 <div class="skill-inner">
                     <div class="skill-front">
                         <img src="assets/images/nodejs.png" alt="Node.js">
-                        <p>Node.js</p>
+                        <p>Node.js (WIP)</p>
                     </div>
                     <div class="skill-back">
                         <a target=”_blank href="https://github.com/jossjic/nodejs">Repositorio</a>
@@ -185,7 +185,7 @@
                 <div class="skill-inner">
                     <div class="skill-front">
                         <img src="assets/images/react.png" alt="React">
-                        <p>React</p>
+                        <p>React (WIP)</p>
                     </div>
                     <div class="skill-back">
                         <a target=”_blank href="https://github.com/jossjic/react">Repositorio</a>
@@ -214,7 +214,7 @@
                         <p>Android</p>
                     </div>
                     <div class="skill-back">
-                        <a target=”_blank href="https://github.com/jossjic/redquizzios">Repositorio</a>
+                        <a target=”_blank href="https://github.com/jossjic/redquizAndroid">Repositorio</a>
                     </div>
                     </div>
             </div>
@@ -224,7 +224,7 @@
             <div class="skill-inner">
                 <div class="skill-front">
                     <img src="assets/images/matlab.png" alt="MATLAB">
-                    <p>MATLAB</p>
+                    <p>MATLAB (WIP)</p>
                 </div>
                 <div class="skill-back">
                     <a target=”_blank href="https://github.com/jossjic/matlab">Repositorio</a>
@@ -236,7 +236,7 @@
             <div class="skill-inner">
                 <div class="skill-front">
                     <img src="assets/images/r.png" alt="R">
-                    <p>R</p>
+                    <p>R (WIP)</p>
                 </div>
                 <div class="skill-back">
                     <a target=”_blank href="https://github.com/jossjic/r">Repositorio</a>
