--- a/portafolio.html
+++ b/portafolio.html
@@ -108,7 +108,7 @@
             <div class="skill-card">
                 <div class="skill-inner">
                     <div class="skill-front">
-                        <img src="assets/images/php.png" alt="PHP">
+                        <img src="assets/images/php.png" alt="PHP yes :o">
                         <p>PHP</p>
                     </div>
                     <div class="skill-back">
