--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <li>
         <a
           target="_blank"
-          href="https://www.canva.com/design/DAFmVFaiBrI/GUufHLdzX9aRagkfhUqesA/edit?utm_content=DAFmVFaiBrI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+          href="https://www.canva.com/design/DAF-IgPeL64/EryWB0URrn5xZkz968ewlA/edit?utm_content=DAF-IgPeL64&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
           data-text="CV"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
