traslation, new image, php fix?

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <ul>
       <li>
-        <a target="_blank" href="portafolio.html" data-text="Portafolio"
+        <a target="_blank" href="portafolio.html" data-text="Portfolio"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -215,7 +215,7 @@
         <a
           target="_blank"
           href="mailto:jossjic_03@hotmail.com"
-          data-text="Contacto"
+          data-text="Contact"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
