dark mode, english version, proyects

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <a
           target="_blank"
           href="https://www.canva.com/design/DAF-IgPeL64/EryWB0URrn5xZkz968ewlA/edit?utm_content=DAF-IgPeL64&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
-          data-text="CV"
+          data-text="Resume"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
