--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <ul>
       <li>
-        <a target="_blank" href="portafolio.html" data-text="Portfolio"
+        <a target="_blank" href="portfolio.html" data-text="Portfolio"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink"
