--- a/portafolio.html
+++ b/portafolio.html
@@ -10,9 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-    <script src="/js/navigator.js"></script>
 
-    <body onload="browserDetect()">
+    <body>
         <header>
             <div class="container">
                 <div class="logo">
@@ -256,16 +255,19 @@
                 </div>
         </div>
         </section>
-        <section class="proyectos" id="#Proyectos">
-            <h2>Proyectos</h2>
-            <p>Estos son algunos de los proyectos en los que he trabajado</p>
-            
+        <section class="proyectos" id="Proyectos">
+            <div class="content">
+                <h2>Proyectos</h2>
+                <p>Estos son algunos de los proyectos en los que he trabajado</p>    
+            </div>
+            </div>
         </section>
         <main>
         </main>
         <footer>
 
         </footer>
+        <script src="./js/navigator.js"></script>
     </body>
     <div class="waves">
         <svg preserveAspectRatio="xMidYMid slice" viewBox="10 10 80 80">
