--- a/portfolio.html
+++ b/portfolio.html
@@ -10,9 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-    <script src="/js/navigator.js"></script>
 
-    <body onload="browserDetect()">
+    <body>
         <header>
             <div class="container">
                 <div class="logo">
@@ -259,9 +258,14 @@
                 </div>
         </div>
         </section>
-        <section class="proyectos" id="#Proyectos">
-
+        <section class="proyectos" id="Proyectos">
+            <div class="content">
+                <h2>Projects</h2>
+                <p>These are some of the projects I have worked on</p>    
+            </div>
+            </div>
         </section>
+        <script src="./js/navigator.js"></script>
         <main>
         </main>
         <footer>
