hobbies created, font size fix, about me improved

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
                 <div class="container">
                     <div class="content">
                         <h2>Hello, my name is José Juan and I can help you build efficient and attractive pages</h2>
-                        <p>I am a student of Computer Technology Engineering at the Monterrey Institute of Technology and I am currently participating in the Oracle Next Education program</p>    
+                        <p>I am a student of Computer Technology Engineering at the Tecnológico de Monterrey and am working on a donation management system for a shelter in Puebla.</p>    
 
                         <ul>
                             <li><a href="https://www.linkedin.com/in/jossjic/" target="_blank"><svg alt="LinkedIn" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" data-supported-dps="24x24" fill="currentColor"  focusable="false">
@@ -70,7 +70,39 @@
         <section class="sobreMi" id="SobreMi">
                 <div class="content">
                     <h2>About me</h2>
-                    <p>Computer Technology Engineer with a firm commitment to academic and professional excellence, backed by <u>two Academic Merit Awards</u> from the Monterrey Institute of Technology. My experience includes web development, programming of physical simulations in <u>MATLAB</u>, creation of educational games in <u>Python</u>, a taxi booking system implemented in <u>Elixir</u> using <u>Node.js</u> and gene analysis in <u>R Studio</u>. I have worked on diverse projects and I am currently dedicated to the development of an application for <u>iOS</u> and <u>Android</u> for the Red Cross. My passion for technology and innovation drives me to contribute to the tech world in a significant way.</p>
+                    <div class="listSobreMi">
+                        <svg height="800px" width="800px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+	 viewBox="0 0 34.418 34.418" xml:space="preserve">
+<g>
+	<path style="fill:currentColor;" d="M32.335,11.606h-6.533v-1.009h6.533V11.606z M32.335,12.264h-6.533v1.011h6.533V12.264z
+		 M32.331,7.687h-6.523V9.91h6.523V7.687z M34.418,5.297v23.827c-0.001,0.357-0.292,0.648-0.65,0.648h-9.397
+		c-0.359,0-0.649-0.291-0.649-0.649V5.297c0-0.358,0.29-0.65,0.649-0.65h9.397C34.127,4.647,34.418,4.939,34.418,5.297z
+		 M33.119,5.944h-8.1v22.53h8.1V5.944z M32.335,13.932h-6.533v1.008h6.533V13.932z M31.272,21.45c0,1.162-0.939,2.099-2.097,2.099
+		c-1.16,0-2.099-0.938-2.099-2.099c0-1.158,0.94-2.098,2.099-2.098C30.333,19.352,31.272,20.293,31.272,21.45z M30.515,21.45
+		c0-0.739-0.6-1.341-1.341-1.341c-0.742,0-1.342,0.601-1.342,1.341s0.6,1.34,1.342,1.34C29.915,22.79,30.515,22.19,30.515,21.45z
+		 M21.937,9.218v13.505c0,0.814-0.655,1.473-1.461,1.473H13.18c0,0-0.414,2.948,2.212,2.948v1.475H13.18H8.758H6.546v-1.473
+		c2.529,0,2.212-2.948,2.212-2.948H1.465C0.656,24.198,0,23.539,0,22.725V9.218c0-0.814,0.656-1.47,1.465-1.47h19.01
+		C21.282,7.748,21.937,8.404,21.937,9.218z M12.332,22.394c0-0.698-0.566-1.263-1.264-1.263c-0.699,0-1.266,0.565-1.266,1.263
+		s0.566,1.265,1.266,1.265C11.767,23.659,12.332,23.092,12.332,22.394z M20.371,9.311H1.568v11.387H20.37h0.001
+		C20.371,20.698,20.371,9.311,20.371,9.311z M11.081,21.603c-0.434,0-0.785,0.352-0.785,0.785s0.352,0.785,0.785,0.785
+		s0.785-0.352,0.785-0.785S11.515,21.603,11.081,21.603z"/>
+</g>
+</svg>
+                    <p>Computer Technology Engineer with a firm commitment to academic and professional excellence, backed by <u>two Academic Merit Awards</u> from the Tecnológico de Monterrey. </p>
+                    </div>
+                    <div class="listSobreMi">
+                        <svg fill="currentColor" width="800px" height="800px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                            <title>stack2</title>
+                            <path d="M28.608 11.246l-12.608-8.632-12.608 8.632 12.608 8.631 12.608-8.631zM16 21.803l-11.129-7.338-1.479 1.535 12.608 8.631 12.608-8.631-1.499-1.568-11.109 7.371zM16 26.559l-11.129-7.338-1.479 1.535 12.608 8.631 12.608-8.631-1.499-1.568-11.109 7.371z"></path>
+                            </svg>
+                    <p> My experience includes web development, programming of physical simulations in <u>MATLAB</u>, creation of educational games in <u>Python</u>, a taxi booking system implemented in <u>Elixir</u> using <u>Node.js</u> and gene analysis in <u>R Studio</u>.</p>
+                    </div>
+                    <div class="listSobreMi">
+                        <svg width="800px" height="800px" viewBox="0 0 32 32" id="i-portfolio" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+                            <path d="M29 17 L29 28 3 28 3 17 M2 8 L30 8 30 16 C30 16 24 20 16 20 8 20 2 16 2 16 L2 8 Z M16 22 L16 18 M20 8 C20 8 20 4 16 4 12 4 12 8 12 8" />
+                        </svg>
+                    <p> I have worked on diverse projects and I am currently dedicated to the development of an application for <u>iOS</u> and <u>Android</u> for the Red Cross. My passion for technology and innovation drives me to contribute to the tech world in a significant way.</p>
+                    </div>
                 </div>
         </section>
 
@@ -264,6 +296,22 @@
                 <p>These are some of the projects I have worked on</p>    
             </div>
             </div>
+        </section>
+        <section class="hobbies" id="Hobbies">
+            <div class="content">
+                <h2>Hobbies</h2>
+                <p>These are some of the hobbies I enjoy</p>
+            </div>
+            <div class="bento">
+                <div class="bentoItem bento--item__1"><div class="text">Testing</div><img src="./assets/images/testing.gif" alt="Testing"></div>
+                <div class="bentoItem bento--item__2"><div class="text">Playing Videogames</div><img src="./assets/images/videogames.gif" alt="Playing Videogames"></div>
+                <div class="bentoItem bento--item__3"><div class="text">Gym Workout</div><img src="./assets/images/gym.gif" alt="Gym Workout"></div>
+                <div class="bentoItem bento--item__4"><div class="text">Cooking</div><img src="./assets/images/cooking.gif" alt="Cooking"></div>
+                <div class="bentoItem bento--item__5"><div class="text">Boxing</div><img src="./assets/images/boxing.gif" alt="Boxing"></div>
+                <div class="bentoItem bento--item__6"><div class="text">Reading</div><img src="./assets/images/reading.gif" alt="Reading"></div>
+                <div class="bentoItem bento--item__7"><div class="text">Watching YT Tech Videos</div><img src="./assets/images/watching.gif" alt="Watching YT Tech Videos"></div>
+            </div>
+            
         </section>
         <script src="./js/navigator.js"></script>
         <main>
