OMI added, redquiz gif, contact info

--- a/portafolio.html
+++ b/portafolio.html
@@ -25,8 +25,9 @@
                         <li><a href="#Skills">Habilidades</a></li>
                         <li><a href="#Proyectos">Proyectos</a></li>
                         <li><a href="#Hobbies">Aficiones</a></li>
-                        <li><a href="#Formación">Formación</a></li>
-                        <li><a href="#Contacto">Contacto</a></li>
+                        <li><a href="#Certificados">Certificados</a></li>
+                        <li><a href="mailto:jossjic_03@hotmail.com?subject=Oportunidad%20de%20Colaboraci%C3%B3n%20|%20Nombre%20Empresa%20o%20Colaborador">Contacto</a>
+</li>
                     </ul>
                 </nav>
                 <div class="buttons">
