--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,9 @@
                         <li><a href="#Skills">Skills</a></li>
                         <li><a href="#Proyectos">Projects</a></li>
                         <li><a href="#Hobbies">Hobbies</a></li>
-                        <li><a href="#Formación">Education</a></li>
-                        <li><a href="#Contacto">Contact</a></li>
+                        <li><a href="#Certificados">Certifications</a></li>
+                        <li><a href="mailto:jossjic_03@hotmail.com?subject=Colaboration%20Oportunity%20|%20Company%20Name%20Or%20Collaborator%20Name">Contact</a>
+                        </li>
                     </ul>
                 </nav>
                 
