resposive css for mobile, general fixes

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Portafolio | José JIC </title>
+	<title>Portfolio | Jose JIC </title>
     <link rel="icon" type="image/svg" href="assets/images/joss_logo.ico"/>
 	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/flexbox.css">
@@ -315,6 +315,59 @@
             
         </section>
         <script src="./js/navigator.js"></script>
+
+        <section class="certificados" id="Certificados">
+            <div class="content">
+                <h2>Certifications</h2>
+                <p>These are some of the certifications I have obtained</p>
+            </div>
+
+            <div class="certificadosBox">
+                <div class="certificado">
+                    <img src="./assets/images/certificados/certificado_cloudPracticioner.png" alt="Certificado AWS Cloud Practitioner">
+                </div>
+                <div class="certificado">
+                    <img src="./assets/images/certificados/certificado_desarrollo.png" alt="Certificado en Desarrollo de Aplicaciones">
+                </div>
+                <div class="certificado">
+                    <img src="./assets/images/certificados/certificado_front.png" alt="Certificado en Desarrollo Frontend">
+                </div>
+                <div class="certificado">
+                    <img src="./assets/images/certificados/certificado_dsd1_1.png" alt="Certificado en Desarrollo de Software 1 - Parte 1">
+                </div>
+                <div class="certificado">
+                    <img src="./assets/images/certificados/certificado_dsd1_2.png" alt="Certificado en Desarrollo de Software 1 - Parte 2">
+                </div>
+                <div class="certificado">
+                    <img src="./assets/images/certificados/certificado_english.png" alt="Certificado de Inglés">
+                </div>
+                <div class="certificado">
+                    <img src="./assets/images/certificados/certificado_meritoAcademico1.png" alt="Certificado de Mérito Académico 1">
+                </div>
+                <div class="certificado">
+                    <img src="./assets/images/certificados/certificado_meritoAcademico2.png" alt="Certificado de Mérito Académico 2">
+                </div>
+                <div class="certificado">
+                    <img src="./assets/images/certificados/certificate_AWS Compute Services overview-1.png" alt="Certificado AWS Compute Services Overview">
+                </div>
+                <div class="certificado">
+                    <img src="./assets/images/certificados/certificate_AWS Storage Path-1.png" alt="Certificado AWS Storage Path">
+                </div>
+                <div class="certificado">
+                    <img src="./assets/images/certificados/certificate_AWS Technical Essentials-1.png" alt="Certificado AWS Technical Essentials">
+                </div>
+                <div class="certificado">
+                    <img src="./assets/images/certificados/certificate_ebs path-1.png" alt="Certificado EBS Path">
+                </div>
+                <div class="certificado">
+                    <img src="./assets/images/certificados/certificate_Getting Started with Amazon Simple Storage Service-1.png" alt="Certificado Getting Started with Amazon Simple Storage Service">
+                </div>
+                <div class="certificado">
+                    <img src="./assets/images/certificados/certificate_Introduction to AWS IAM-1.png" alt="Certificado Introduction to AWS IAM">
+                </div>
+            </div>
+            
+        </section>
         <main>
         </main>
         <footer>
